--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -7,6 +7,11 @@
 // custom styles
 
 $orange-rdv: #ff9a01;
+$orange-hover: #ea7023;
+$red-rdv: #da5133;
+$timeline: #a38e7c;
+$white-trans: rgba(265, 265, 265, 0.5);
+$white-trans-more: rgba(265, 265, 265, 0.3);
 
 html {
   height: 100%;
@@ -24,7 +29,25 @@ body {
   background-position: center;
   background-image: url(../images/background-rendezvous.jpg);
   font-size: 1.6rem;
+  line-height: 1.6rem;
   text-align: center;
+  @media screen and (max-height: 500px) {
+    display: block;
+  }
+  @include media-breakpoint-down(sm) {
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+  }
+}
+
+form,
+.pageCenter {
+  max-width: 60rem;
+  margin: 0 auto;
+  @include media-breakpoint-down(sm) {
+    padding: 1rem;
+    width: 100%;
+  }
 }
 
 a {
@@ -40,6 +63,12 @@ a {
   }
 }
 
+.logo {
+  width: 26rem;
+  height: 6rem;
+  margin-bottom: 7rem;
+}
+
 h1,
 h2,
 h3,
@@ -51,16 +80,37 @@ h5 {
 
 h1 {
   font-size: 3.6rem;
+  line-height: 3.6rem;
   color: #fff;
+  margin: 0 0 3rem;
+  @include media-breakpoint-down(sm) {
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+    margin: 0 0 2rem;
+  }
 }
 
 h2 {
   font-size: 2rem;
-  color: #ff9a01;
+  line-height: 2rem;
+  margin-bottom: 2rem;
   font-style: italic;
+  @include media-breakpoint-down(sm) {
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+  }
 }
 
-p {
+.no-italic {
+  font-style: initial;
+}
+
+.orange {
+  color: $orange-rdv;
+}
+
+p,
+span {
   color: #fff;
   margin: 0;
 }
@@ -75,4 +125,340 @@ a {
   padding: 1rem 4rem;
   text-decoration: none;
   text-transform: uppercase;
+  transition: 0.4s background ease;
+  &:hover {
+    background-color: $orange-hover;
+  }
+}
+
+.nav__bottom {
+  position: fixed;
+  bottom: 2rem;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  @media screen and (max-height: 500px) {
+    position: relative;
+    bottom: 0;
+  }
+  @include media-breakpoint-down(sm) {
+    bottom: 1rem;
+  }
+  a {
+    margin: 0.5rem;
+    display: inline-block;
+  }
+}
+
+input[type='text'],
+input[type='number'],
+.inputText,
+textarea {
+  background-color: rgba(265, 265, 265, 0.3);
+  border: 0.1rem solid rgba(265, 265, 265, 0.5);
+  padding: 1rem 2rem;
+  border-radius: 0.4rem;
+  transition: 0.25s all ease-out;
+  color: #fff;
+  margin: 0.5rem;
+}
+
+textarea {
+  padding: 2rem 3rem;
+  margin: 0.5rem 0;
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+    padding: 1rem 2rem;
+  }
+}
+
+.badg-check {
+  &-container {
+    display: inline-block;
+    text-transform: uppercase;
+    margin: 1.2rem 0.2rem 2.2rem;
+    @include media-breakpoint-down(sm) {
+      display: block;
+      width: 100%;
+      padding: 0.5rem;
+      height: 3.4rem;
+    }
+  }
+  &[type='radio'] {
+    visibility: hidden;
+    display: none;
+    height: 0;
+    width: 0;
+    &:checked + label {
+      border: 0.2rem solid $orange-rdv;
+      background-color: transparent;
+      color: $orange-rdv;
+      margin-top: -0.2rem;
+    }
+  }
+  &__label {
+    text-align: center;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.15);
+    color: #fff;
+    padding: 1rem 2rem;
+    border-radius: 0.4rem;
+    transition: 0.25s all ease-out;
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      display: block;
+      padding: 0.5rem 2rem;
+      line-height: 3.2rem;
+    }
+  }
+}
+
+select {
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-color: rgba(265, 265, 265, 0.2);
+  border: 0.1rem solid rgba(265, 265, 265, 0.5);
+  background-image: none;
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+  }
+}
+/* Remove IE arrow */
+select::-ms-expand {
+  display: none;
+}
+/* Custom Select */
+.select {
+  position: relative;
+  display: flex;
+  width: 30rem;
+  height: 5rem;
+  line-height: 5rem;
+  border: 0.1rem solid rgba(265, 265, 265, 0.5);
+  overflow: hidden;
+  border-radius: 0.4rem;
+  margin: 0 auto;
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+  }
+}
+select {
+  text-transform: uppercase;
+  flex: 1;
+  padding: 0 2rem;
+  color: #fff;
+  cursor: pointer;
+  option {
+    color: #000;
+  }
+}
+/* Arrow */
+.select::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1.5rem;
+  width: 4.5rem;
+  height: 5rem;
+  background-color: $orange-rdv;
+  background-image: url(../images/arrow-down.svg);
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 0.25s all ease;
+}
+.select:hover::after {
+  color: #fff;
+}
+
+.timeline {
+  position: fixed;
+  top: 4rem;
+  left: 0;
+  right: 0;
+  @media screen and (max-height: 500px) {
+    position: relative;
+    top: 1rem;
+  }
+  @include media-breakpoint-down(sm) {
+    top: 1rem;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      width: 1.4rem;
+      height: 1.4rem;
+      text-align: center;
+      line-height: 2rem;
+      border-radius: 1rem;
+      top: 0;
+      left: 0;
+      background: $timeline;
+      margin: 0 1.8rem;
+      display: inline-block;
+      color: white;
+      position: relative;
+      text-indent: -5000px;
+      border: solid 0.2rem $timeline;
+      @include media-breakpoint-down(sm) {
+        display: none;
+      }
+      img {
+        transition: left 0.4s ease-out;
+        opacity: 0;
+        width: 0.5rem;
+        height: 0.5rem;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 20%;
+        position: absolute;
+      }
+    }
+
+    li::before {
+      content: '';
+      position: absolute;
+      top: 0.44rem;
+      left: -4rem;
+      width: 4rem;
+      height: 0.2rem;
+      background: $timeline;
+      z-index: -1;
+      @include media-breakpoint-down(sm) {
+        display: none;
+      }
+    }
+    li::after {
+      content: '';
+      background-image: url(../images/success.svg);
+      background-size: cover;
+      display: block;
+      width: 0.8rem;
+      height: 0.8rem;
+      position: absolute;
+      top: 0;
+      left: 0.1rem;
+    }
+
+    li:first-child::before {
+      display: none;
+    }
+
+    .active {
+      background: $orange-rdv;
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      top: 1.1rem;
+      @include media-breakpoint-down(sm) {
+        display: block;
+        margin: 0 auto;
+      }
+      img {
+        left: 50%;
+        opacity: 1;
+        width: 2rem;
+        height: 2rem;
+      }
+      &:after {
+        background-image: none;
+      }
+
+      &:before {
+        top: 1.9rem;
+      }
+    }
+
+    .active ~ li {
+      background: none;
+      border: solid 0.2rem $timeline;
+    }
+
+    .active ~ li::before {
+      background: $timeline;
+    }
+    .active ~ li::after {
+      background-image: none;
+    }
+  }
+}
+
+.errorMessage {
+  background-color: $red-rdv;
+  border-radius: 0.4rem;
+  padding: 0.3rem;
+  position: relative;
+  max-width: 60rem;
+  margin: 2rem auto;
+
+  &:after {
+    bottom: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: ' ';
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(136, 183, 213, 0);
+    border-bottom-color: $red-rdv;
+    border-width: 7px;
+    margin-left: -7px;
+  }
+}
+
+.success-circle {
+  width: 7rem;
+  height: 7rem;
+  margin: 0 auto;
+}
+
+.btn-white {
+  background-color: #fff;
+  color: $orange-rdv;
+}
+
+.box-holder {
+  color: #fff;
+  display: flex;
+  @include media-breakpoint-down(sm) {
+    display: block;
+  }
+  .box-final {
+    margin: 1rem;
+    padding: 2rem;
+    flex-basis: 50%;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
+    @include media-breakpoint-down(sm) {
+      margin: 1rem 0;
+    }
+    &.lions {
+      img {
+        width: 20rem;
+        margin: 1rem;
+      }
+      background-color: $orange-rdv;
+    }
+    &.photos {
+      img {
+        height: 10rem;
+        margin: 1rem;
+      }
+      h2 {
+        margin-bottom: 0;
+      }
+      background-color: $red-rdv;
+    }
+  }
 }
